templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-crud-clientes
  namespace: apps
spec:
  type: ClusterIP #NodePort, ClusterIP 
  ports:
    - port: 9000
      # nodePort: 30001
  selector:
    app: crud-clientes
